# ClimateClaimVerifier

./: .env.example  .gitignore  FINAL_SYSTEM_DESIGN.md  LICENSE  MONITORING.md  MULTIMODAL_REBUILD_PLAN.md  PROJECT_JOURNEY.md  README.md  SESSION_HANDOFF.md  WEEK7_STATUS.md  app.py  course_journey.md  project_description.md  project_structure.md  pyproject.toml  read_nb.py
.streamlit/: config.toml
Analysis/: evaluation.md
data/: admin_overrides.jsonl  claim_eval.csv  claim_eval_gold.csv  lora_seed.jsonl  signal_eval.csv
data/image_eval/: README.md  labels.jsonl
models/: Modelfile  README.md
notebooks/: colab_daily_maintenance.ipynb  colab_shakeout_pipeline.ipynb  week5_lora_training_colab.executed.ipynb  week5_lora_training_colab.ipynb
presentation/: .gitignore  Demo_Script_4min.docx  README.md  Speaker_Notes.docx  build-diagrams.sh  index-v2.html  index.html  package.json  presentation notes.docx
presentation/css/: theme-v2.css  theme.css
presentation/diagrams/: 00-problem.d2  01-week1-classifier.d2  02-week2-embeddings.d2  03-week3-data-backbone.d2  04-week4-eval.d2  05-week5-lora.d2  06-week6-rag.d2  07-week7-vision.d2  08-full-system.d2  09-redflag-logic.d2  10-two-loops.d2  11-eval-discipline.d2  12-week8-eval.d2  13-workflow.d2  _theme.d2
presentation/images/: .gitkeep  README.md
presentation/js/: deck-v2.js  deck.js
scripts/: build_lora_trainset.py  eval_image_extraction.py  eval_signal.py  export_for_colab.py  flag_eval_posts.py  import_from_colab.py  sample_eval_candidates.py
specs/: week5_implementation_specs.yaml
(+37 files in other folders)
