[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/climate_verifier"]

[project]
name = "climate-claim-verifier"
version = "0.1.0"
requires-python = ">=3.12, <3.13"
dependencies = [
    "atproto>=0.0.55",
    "requests>=2.32.0",
    "apscheduler>=3.10.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "ollama>=0.3.0",
    "streamlit>=1.40.0",
    "ipykernel>=6.0.0",
    "python-docx>=1.2.0",
]
